--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-wrapper">
       <h1>Подпишитесь на&nbsp;рассылку Академии Selectel</h1>
       <p>Читайте IT-материалы, проходите бесплатные курсы и первыми узнавайте о митапах и конференциях.</p>
-      <a href="" targer="_blank">Подписаться</a>
+      <a href="https://selectel.ru/subscribe/" targer="_blank">Подписаться</a>
     </div>
   </header>
   <main>
@@ -27,17 +27,14 @@
           <h3>Текст и подборка
             месяца</h3>
           <p>Свежие публикации, которые советует редакция.</p>
-          <a href="" targer="_blank">Пример письма</a>
         </li>
         <li class="list-item list-bell">
           <h3>Анонсы курсов </h3>
           <p>Ссылка на новый бесплатный курс.</p>
-          <a href="" targer="_blank">Пример письма</a>
         </li>
         <li class="list-item list-logo">
           <h3>Продуктовый дайджест</h3>
           <p>Новости о наших продуктах и акциях.</p>
-          <a href="" targer="_blank">Пример письма</a>
         </li>
         <li class="list-item list-item--special">
           <h3>Кому будет полезно</h3>
